K8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-backend
  labels:
    app: pfe-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pfe-backend
  template:
    metadata:
      labels:
        app: pfe-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1-virtual-machine
      containers:
        - name: pfe-backend
          image: khalilkh/pfe-back:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
