K8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pfe-frontend
  template:
    metadata:
      labels:
        app: pfe-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1-virtual-machine
      containers:
        - name: pfe-frontend
          image: khalilkh/pfe-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
