K8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pfe-backend-service
spec:
  selector:
    app: pfe-backend
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31615
