K8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pfe-frontend-service
spec:
  selector:
    app: pfe-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
